--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,22 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Ejercicio_1</title>
 </head>
 <body>
     <header>
-        
+        <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <div class="container-fluid ">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ">
+                  <li class="nav-item">
+                    <a class="nav-link active " aria-current="page" href="#">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Redes Sociales</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <section>
-            <div class="row">
+            <div class="row text-white">
                 <div class="col bg-warning">div1</div>
                 <div class="col bg-danger">div2</div>
                 <div class="col bg-info">div 3</div>
-                <div class="col bg-dark text-white">div 4</div>
+            </section>
+
+            <div class="container bg-danger">
+                <p>Lorem ipsum dolor sit amet conseluptatibusdelectus sunt. Quam ex dignissimos repellat molestias!</p>
             </div>
-        </section>
+            <div class="container-fluid bg-info">
+                <p>Lorem ipsum dolor sit, amet cons donventore saepe, recusandae itaque?</p>
+            </div>
+            <div class="row">
+              <div class="col bg-dark text-white  sm-12">col 1</div>
+              <div class="col bg-info sm-12">col 2</div>
+              <div class="col bg-danger sm-12">col 3</div>
+              <div class="col bg-dark text-white  sm-12"> https://www.youtube.com/watch?v=JDs45GmZWUo&t=1308s</div>
+              
+            </div>
     </main>
     <footer>
 
