--- a/HTML/ejercicio_1.html
+++ b/HTML/ejercicio_1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Este es el header</h1>
+        <h1 class="eje1">Este es el header</h1>
     </header>
     <main>
         <h1>Título 1</h1>
@@ -21,7 +21,7 @@
         quibusdam minima facilis consectetur vitae officia. Nam rem harum aliquam in, at eveniet accusantium 
         molestias autem non distinctio!</p>
 
-        <h2>Titulo 2</h2>
+        <h2 class="ejer1" >Titulo 2</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem 
             quas, distinctio officia ducimus culpa quidem excepturi delectus 
             suscipit quis dicta quia <strong>accusantium molestias labore nam </strong>magni. 
