--- a/HTML/ejercicio_3.html
+++ b/HTML/ejercicio_3.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Ejer_3</title>
 </head>
-<body>
-    <head>
+<body class="body3">
+    <header class="header3">
         <h1 align="center">Este es el header</h1>
-    </head>
+    </header>
     <main>
         <section>
             <div>   
-                <h2><i>Lista Animada de Enlaces</i></h2>
-                <ul>
+                <h2 class="lista3"><i>Lista Animada de Enlaces</i></h2>
+                <ul class="ul3">
                     <li><strong>Buscadores</strong></li>
                         <ul type="circle">
-                            <li><a href="https://www.google.com/">Google</a></li>
-                            <li><a href="https://www.bing.com/?setlang=es">Bing</a></li>
+                            <li><a class="google" href="https://www.google.com/">Google</a></li>
+                            <li><a class="bing" href="https://www.bing.com/?setlang=es">Bing</a></li>
                         </ul>    
                     <li><strong>Redes Sociales</strong></li>
                         <ul type="circle">
