ejer 3 - 4 y 7 de js

--- a/GUIA 18 JS/ejer1.html
+++ b/GUIA 18 JS/ejer1.html
@@ -12,6 +12,7 @@
             hoy? (soleado, nublado, lloviendo). A continuación, mostrar por pantalla un mensaje que
             indique “El día de hoy está ...”, completando el mensaje con el dato que ingresó el usuario.</p>
     </div>
+    <aside> hola</aside>
     <script src="js/ejercicio1.js" type="text/javascript"></script>
 </body>
 </html>
