--- a/GUIA 18 JS/ejer13.html
+++ b/GUIA 18 JS/ejer13.html
@@ -20,10 +20,10 @@
         <h2>Crear un Objeto persona</h2>
         
         <form id="formu">
-            <label for="nombre"> Nombre </label>
+            <label > Nombre </label>
             <input class="my-2" type="text"  id="nombre" placeholder="nombre" required >
             <br>
-            <label for="edad"> Edad </label>
+            <label > Edad </label>
             <input class="my-2" type="number"  id="edad" placeholder="edad" required >
             <br>
             <label for="">Sexo del usuario</label>
