--- a/GUIA 18 JS/ejer13.html
+++ b/GUIA 18 JS/ejer13.html
@@ -28,11 +28,11 @@
             <br>
             <label for="">Sexo del usuario</label>
             <br>
-            <input type="radio" name="sexo" value="1" id="hombre">
+            <input type="radio" name="sexo" value="hombre" id="hombre">
                 <label for="hombre">Hombre</label>
-            <input type="radio" name="sexo" value="2" id="mujer">
+            <input type="radio" name="sexo" value="mujer" id="mujer">
                 <label for="mujer">Mujer</label>
-            <input type="radio" name="sexo" value="3" id="otro">
+            <input type="radio" name="sexo" value="otro" id="otro">
                 <label for="otro">Otro</label>
                 <br>           
                 <label for="peso"> Peso </label>
